# new-arch-tricks

./: CONTRIBUTING.md  README.md  package.json  react-native-new-arch-tricks.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: NewArchTricksModule.cpp  NewArchTricksModule.h  OnLoad.cpp
android/src/main/java/com/newarchtricks/: NewArchTricksModule.kt  NewArchTricksPackage.kt  NewArchTricksView.kt  NewArchTricksViewManager.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/NewArchTricksExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/NewArchTricksExample.xcodeproj/: project.pbxproj
example/ios/NewArchTricksExample.xcodeproj/xcshareddata/xcschemes/: NewArchTricksExample.xcscheme
example/ios/NewArchTricksExample.xcworkspace/: contents.xcworkspacedata
example/ios/NewArchTricksExampleTests/: NewArchTricksExampleTests.m
example/src/: App.tsx
ios/: NewArchTricks.h  NewArchTricks.mm  NewArchTricksViewComponentView.h  NewArchTricksViewComponentView.mm  NewArchTricksViewManager.mm
shared/: NewArchTricksCommitHook.cpp  NewArchTricksCommitHook.h  NewArchTricksJSI.cpp  NewArchTricksJSI.h
shared/react/renderer/components/NewArchTricksSpec/: ComponentDescriptors.cpp  (+6 more)
src/: NewArchTricksModule.tsx  NewArchTricksView.tsx  index.tsx
src/specs/: NativeNewArchTricksModule.ts  NewArchTricksNativeComponent.ts
(+3 files in other folders)
